# investigate_rclcpp_rclpy_same_process

./: CMakeLists.txt  README.md  both.py  package.xml  use_ros.cpp
